--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+<body>
+  
+  <h1>My First Heading</h1>
+  <h2>My second heading</h2>
+  
+  <p>My first paragraph</p>
+  <p>otrā rindkopa</p>
+  
+  </body>
+  </html>
